--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-useragent": "^2.0.1",
+    "get-client-ip": "^3.0.4",
+    "ip-address": "^10.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "request-ip": "^3.3.0",
+    "serverless-http": "^4.0.0",
+    "useragent": "^2.3.0"
   },
   "name": "e-commerce-backend",
   "version": "1.0.0",
