--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.10",
     "request-ip": "^3.3.0",
     "serverless-http": "^4.0.0",
+    "socket.io": "^4.8.1",
     "useragent": "^2.3.0"
   },
   "name": "e-commerce-backend",
